--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -5,48 +5,48 @@ import BaseHead from "../../components/BaseHead.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
 import { getEntry } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
-// 1. Generate a new path for every collection entry
-export async function getStaticPaths() {
-  const blogEntries = await getCollection("blog");
-  return blogEntries.map((entry: { slug: any }) => ({
-    params: { slug: entry.slug },
-    props: { entry }
-  }));
-}
-// 2. For your template, you can get the entry directly from the prop
-const { entry }: { entry: any } = Astro.props;
-const author: any = await getEntry(entry.data.author);
+import Layout from "../../layouts/Layout.astro";
 
-const { Content } = await entry.render();
+// STATIC MODE
+// -------------------------
+// Generate a new path for every collection entry
+// export async function getStaticPaths() {
+//   const blogEntries = await getCollection("blog");
+//   return blogEntries.map((entry: { slug: any }) => ({
+//     params: { slug: entry.slug },
+//     props: { entry }
+//   }));
+// }
+// const { entry }: { entry: any } = Astro.props;
+// -------------------------
+
+// SERVER MODE
+// -------------------------
+const entry = await getEntry("blog", Astro.params.slug);
+// -------------------------
+
+const author: any = await getEntry(entry!.data.author);
+
+const { Content } = await entry!.render();
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section class="text-center py-10">
-        <h1 class="text-4xl font-bold">{entry.data.title}</h1>
-        <div
-          class="text-gray-500 my-6 flex justify-center items-center gap-3 text-sm"
-        >
-          <img src={author.data.avatar} class="rounded-full w-8" alt="" />
-          <span class="font-medium">{author.data.name}</span>•
-          <FormattedDate date={entry.data.pubDate} />
-        </div>
-        <img
-          src={entry.data.featureImage}
-          class="object-cover object-center w-full h-[500px]"
-          alt=""
-        />
-      </section>
-      <section class="container">
-        <Content />
-      </section>
-    </main>
-    <!-- <Footer /> -->
-  </body>
-</html>
+<Layout title={entry!.data.title}>
+  <section class="text-center py-10">
+    <h1 class="text-4xl font-bold">{entry!.data.title}</h1>
+    <div
+      class="text-gray-500 my-6 flex justify-center items-center gap-3 text-sm"
+    >
+      <img src={author.data.avatar} class="rounded-full w-8" alt="" />
+      <span class="font-medium">{author.data.name}</span>•
+      <FormattedDate date={entry!.data.pubDate} />
+    </div>
+    <img
+      src={entry!.data.featureImage}
+      class="object-cover object-center w-full h-[500px]"
+      alt=""
+    />
+  </section>
+  <section class="container">
+    <Content />
+  </section>
+</Layout>
