--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,50 +1,34 @@
 ---
-import BaseHead from "../../components/BaseHead.astro";
 import BlogCard from "../../components/BlogCard.astro";
-import Header from "../../components/Header.astro";
 import BlogCardReact from "../../components/BlogCardReact.tsx";
 
-import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
-import { getCollection, getEntry } from "astro:content";
+import { getCollection } from "astro:content";
+import Layout from "../../layouts/Layout.astro";
 
 const posts = (await getCollection("blog")).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section class="container">
-        <div class="text-center py-32">
-          <h1 class="text-4xl font-bold">Welcome to our blogs</h1>
-          <input
-            class="h-10 mt-5 min-w-[500px] px-5 rounded-lg bg-gray-100 focus-visible:outline-primary"
-            placeholder="Search by keyworks..."
-          />
-        </div>
-        <div>
-          <BlogCard isHighlight post={posts[0]} />
-          <div class="grid grid-cols-3 gap-16 my-16">
-            {posts.slice(0, 3).map((post) => <BlogCard post={post} />)}
-          </div>
-        </div>
-        <div class="my-5 mt-[80px] text-xl font-medium">All blogs</div>
-        <div class="grid grid-cols-3 gap-16">
-          <!-- {posts.map((post) => <BlogCard post={post} />)} -->
-          {
-            posts.map((post) => (
-              <BlogCardReact post={post} client:only="react" />
-            ))
-          }
-        </div>
-      </section>
-    </main>
-    <!-- <Footer /> -->
-  </body>
-</html>
+<Layout title="Blog">
+  <section class="container">
+    <div class="text-center py-32">
+      <h1 class="text-4xl font-bold">Welcome to our blogs</h1>
+      <input
+        class="h-10 mt-5 min-w-[500px] px-5 rounded-lg bg-gray-100 focus-visible:outline-primary"
+        placeholder="Search by keyworks..."
+      />
+    </div>
+    <div>
+      <BlogCard isHighlight post={posts[0]} />
+      <div class="grid grid-cols-3 gap-16 my-16">
+        {posts.slice(0, 3).map((post) => <BlogCard post={post} />)}
+      </div>
+    </div>
+    <div class="my-5 mt-[80px] text-xl font-medium">All blogs</div>
+    <div class="grid grid-cols-3 gap-16">
+      <!-- {posts.map((post) => <BlogCard post={post} />)} -->
+      {posts.map((post) => <BlogCardReact post={post} client:only="react" />)}
+    </div>
+  </section>
+</Layout>
