--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,4 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <main>
-    <Header />
-  </main>
-</Layout>
+<Layout title="Welcome to Astro." />
